crates/ra_cargo_watch/src/conv/snapshots/ra_cargo_watch__conv__test__snap_rustc_wrong_number_of_parameters.snap
---
source: crates/ra_cargo_watch/src/conv/test.rs
expression: diag
---
MappedRustDiagnostic {
    location: Location {
        uri: "file:///test/compiler/ty/select.rs",
        range: Range {
            start: Position {
                line: 103,
                character: 17,
            },
            end: Position {
                line: 103,
                character: 29,
            },
        },
    },
    diagnostic: Diagnostic {
        range: Range {
            start: Position {
                line: 103,
                character: 17,
            },
            end: Position {
                line: 103,
                character: 29,
            },
        },
        severity: Some(
            Error,
        ),
        code: Some(
            String(
                "E0061",
            ),
        ),
        source: Some(
            "rustc",
        ),
        message: "this function takes 2 parameters but 3 parameters were supplied\nexpected 2 parameters",
        related_information: Some(
            [
                DiagnosticRelatedInformation {
                    location: Location {
                        uri: "file:///test/compiler/ty/select.rs",
                        range: Range {
                            start: Position {
                                line: 218,
                                character: 4,
                            },
                            end: Position {
                                line: 230,
                                character: 5,
                            },
                        },
                    },
                    message: "defined here",
                },
            ],
        ),
        tags: None,
    },
    fixes: [],
}
